--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,15 @@
 *.jar
 *.war
 *.ear
+target
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#idea files
+*.idea
+*.iml
+
+#nn resource
+nn.txt
+
